test-data/elab/do/check.snapshot
exit status: 0

stdout = """
do { (fun(x : Int) => x) } : forall(_ : Int) -> Int
do { #error } : Int
#error : Int

"""

stderr = """
error: Type mismatch: expected `Int`, found `Bool`
  ┌─ test-data/elab/do/check.pion:2:14
  │
2 │ #check (do { false }) : Int;
  │              ^^^^^

error: Type mismatch: expected `Int`, found `Unit`
  ┌─ test-data/elab/do/check.pion:3:9
  │
3 │ #check (do {}) : Int;
  │         ^^^^^


"""
